# desafio_lacreisaude

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
consulta/: models.py  serializers.py  tests.py  urls.py  views.py
consulta/migrations/: 0001_initial.py  0002_remove_consulta_data_consulta_data_consulta.py  0003_alter_consulta_table.py  0004_alter_consulta_profissional.py
desafio_lacreisaude/: asgi.py  settings.py  urls.py  wsgi.py
profissional/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
profissional/migrations/: 0001_initial.py  0002_rename_profissional_contato_profissional_contato_and_more.py  0003_alter_profissional_contato.py  0004_alter_profissional_table.py
