[project]
name = "desafio-lacreisaude"
version = "0.1.0"
description = "API para gerenciamento de consultas médicas e profissionais de saúde"
authors = [
    {name = "ustavoteles",email = "telesgustavo.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djangorestframework (>=3.15.2,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-django (>=4.9.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
